--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simple Expense Sorter</title>
+  <title>Expense Sorter</title>
   <style>
     body { font-family: sans-serif; padding: 2rem; background: #f9f9f9; }
     #drop-zone { border: 2px dashed #ccc; padding: 2rem; text-align: center; background: #fff; cursor: pointer; }
