--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
   <script src="./script.js"></script>
 </body>
 <div id="instructions" style="margin-top: 1rem; padding: 1rem; background: #fff; border: 1px solid #ccc;">
-  <h3>📝 How to Use</h3>
+  <h3> – How to Download Your CSV</h3>
   <ol>
-    <li>Log in to your bank account.</li>
-    <li>Find your transaction history or statements section.</li>
-    <li>Look for an option to <strong>export or download</strong> your transactions.</li>
-    <li>Choose <strong>CSV</strong> as the file format.</li>
+    <li>Log in to your <strong>Bank online account</strong>.</li>
+    <li>Click on the account you'd like to review.</li>
+    <li>Click on <strong>Download Account Activity</strong>.</li>
+    <li>Select your desired <strong>date range</strong>.</li>
+    <li>Choose <strong>Comma Delimited, Or CSV</strong> as the file format.</li>
+    <li>Click <strong>Download</strong> and save the file.</li>
     <li>Then <strong>drag and drop the CSV</strong> into the box below or click to upload it.</li>
   </ol>
   <p><em>Note: Your data never leaves your browser — this tool runs entirely on your device.</em></p>
